--- a/tools/perf/Build
+++ b/tools/perf/Build
@@ -11,6 +11,7 @@ perf-y += builtin-buildid-cache.o
 perf-y += builtin-kallsyms.o
 perf-y += builtin-list.o
 perf-y += builtin-record.o
+perf-y += builtin-record-indirect-branches.o
 perf-y += builtin-report.o
 perf-y += builtin-stat.o
 perf-y += builtin-timechart.o
